{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "dce359ce-3655-4a14-bbb2-d6b7690bf545",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "9a882c99-c78b-4666-a52e-cc47458b3671",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Farm",
                    "type": "Button",
                    "id": "5055957d-9f6a-43b2-8634-7a791a872648",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "0fb4d5db-6577-47fd-ae73-c6a723ab1f6c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "1390e6a2-558a-4708-9c04-e95f958a1014",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5655674f-aa84-476b-83e1-8ac5ad847181",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6024ead6-8a43-48e5-9fe5-323a52be6d20",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9c2071b4-fb3a-4926-b892-2cba46a6a2bc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3dc8b5ac-07dd-4889-803f-85e41633a157",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Farm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "663bfd02-8864-4250-87e8-45f588c8aeac",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "09c5f59c-40fc-4cae-8fff-f8f319c25f89",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "40e27d3b-00c1-43a0-986c-6f3d54b1258f",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}